--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: open-sans;
     margin: 0;
     background-color: #f2f2f2;
 }
@@ -58,6 +58,7 @@ img.logo{
 
 .table{
     width: 100%;
+    margin-top: 1rem;
 }
 
 .table th{
@@ -84,4 +85,26 @@ label{
 
 .form-control{
     min-width: 200px;
+}
+
+.home{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 1rem 1rem;
+}
+
+.yellow{
+    border: yellow 5px solid;
+    text-align: center;
+}
+
+.yellow-large{
+    border: yellow 5px solid;
+    grid-row: span 2;
+}
+
+.yellow-large img{
+    height: auto;
+    width: 30rem;
+    padding: 1rem;
 }
